more components added

--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@vercel/analytics": "^1.1.1",
+    "framer-motion": "^10.16.16",
+    "next": "14.0.4",
+    "next-video": "^0.11.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-parallax-tilt": "^1.7.179"
   },
   "devDependencies": {
     "typescript": "^5",
